converted InfoPerson to InfoPerson wrapper