@@ -15,6 +15,7 @@ import net.sourceforge.fenixedu.applicationTier.Filtro.exception.NotAuthorizedFi
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceException;
 import net.sourceforge.fenixedu.dataTransferObject.InfoCountry;
 import net.sourceforge.fenixedu.dataTransferObject.InfoPerson;
+import net.sourceforge.fenixedu.dataTransferObject.InfoPersonEditor;
 import net.sourceforge.fenixedu.domain.person.Gender;
 import net.sourceforge.fenixedu.domain.person.IDDocumentType;
 import net.sourceforge.fenixedu.domain.person.MaritalStatus;
@@ -24,6 +25,7 @@ import net.sourceforge.fenixedu.presentationTier.Action.masterDegree.administrat
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionConstants;
 import net.sourceforge.fenixedu.util.Data;
 
+import org.apache.commons.lang.StringUtils;
 import org.apache.struts.Globals;
 import org.apache.struts.action.ActionError;
 import org.apache.struts.action.ActionErrors;
@@ -35,237 +37,233 @@ import org.apache.struts.actions.DispatchAction;
 import org.apache.struts.util.LabelValueBean;
 
 public class EditStudentPersonInfoDispatchAction extends DispatchAction {
-    
 
     public ActionForward prepare(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
-        HttpSession session = request.getSession(false);
-        //      Clear the Session
-        session.removeAttribute(SessionConstants.NATIONALITY_LIST_KEY);
-        session.removeAttribute(SessionConstants.MARITAL_STATUS_LIST_KEY);
-        session.removeAttribute(SessionConstants.IDENTIFICATION_DOCUMENT_TYPE_LIST_KEY);
-        session.removeAttribute(SessionConstants.SEX_LIST_KEY);
-        session.removeAttribute(SessionConstants.MONTH_DAYS_KEY);
-        session.removeAttribute(SessionConstants.MONTH_LIST_KEY);
-        session.removeAttribute(SessionConstants.YEARS_KEY);
-        session.removeAttribute(SessionConstants.EXPIRATION_YEARS_KEY);
-        session.removeAttribute(SessionConstants.CANDIDATE_SITUATION_LIST);
+	    HttpServletResponse response) throws Exception {
+	HttpSession session = request.getSession(false);
+	//      Clear the Session
+	session.removeAttribute(SessionConstants.NATIONALITY_LIST_KEY);
+	session.removeAttribute(SessionConstants.MARITAL_STATUS_LIST_KEY);
+	session.removeAttribute(SessionConstants.IDENTIFICATION_DOCUMENT_TYPE_LIST_KEY);
+	session.removeAttribute(SessionConstants.SEX_LIST_KEY);
+	session.removeAttribute(SessionConstants.MONTH_DAYS_KEY);
+	session.removeAttribute(SessionConstants.MONTH_LIST_KEY);
+	session.removeAttribute(SessionConstants.YEARS_KEY);
+	session.removeAttribute(SessionConstants.EXPIRATION_YEARS_KEY);
+	session.removeAttribute(SessionConstants.CANDIDATE_SITUATION_LIST);
 
-        if (session != null) {
-            IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
-            Integer personId = 0;
-            try {
-                personId = new Integer(getFromRequest("personId", request));
-            } catch (NumberFormatException numberFormatException) {
-                ActionErrors errors = new ActionErrors();
-                errors.add("nonExisting", new ActionError("error.exception.noStudents"));
-                saveErrors(request, errors);
-                return mapping.findForward("Insuccess");
-            }
-            
-            Integer studentNumber = new Integer(getFromRequest("studentNumber", request));
-            request.setAttribute("studentNumber", studentNumber);
+	if (session != null) {
+	    IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
+	    Integer personId = 0;
+	    try {
+		personId = new Integer(getFromRequest("personId", request));
+	    } catch (NumberFormatException numberFormatException) {
+		ActionErrors errors = new ActionErrors();
+		errors.add("nonExisting", new ActionError("error.exception.noStudents"));
+		saveErrors(request, errors);
+		return mapping.findForward("Insuccess");
+	    }
 
-            InfoPerson infoPerson = null;
-            Object args[] = { personId };
-            try {
-                infoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
-                        "ReadPersonByID", args);
-            } catch (FenixServiceException e) {
-                throw new FenixActionException(e);
-            }
+	    Integer studentNumber = new Integer(getFromRequest("studentNumber", request));
+	    request.setAttribute("studentNumber", studentNumber);
 
-            if (infoPerson == null) {
-                ActionErrors errors = new ActionErrors();
-                errors.add("nonExisting", new ActionError("error.exception.noStudents"));
-                saveErrors(request, errors);
-                return mapping.findForward("NoStudent");
-            }
-            request.setAttribute("infoPerson", infoPerson);
-            
-            DynaActionForm changeApplicationInfoForm = (DynaActionForm) form;
-            populateForm(changeApplicationInfoForm, infoPerson);
+	    InfoPerson infoPerson = null;
+	    Object args[] = { personId };
+	    try {
+		infoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
+			"ReadPersonByID", args);
+	    } catch (FenixServiceException e) {
+		throw new FenixActionException(e);
+	    }
 
-            //          Get List of available Countries
-            Object result = null;
-            result = ServiceManagerServiceFactory.executeService(userView, "ReadAllCountries", null);
-            List country = (ArrayList) result;
+	    if (infoPerson == null) {
+		ActionErrors errors = new ActionErrors();
+		errors.add("nonExisting", new ActionError("error.exception.noStudents"));
+		saveErrors(request, errors);
+		return mapping.findForward("NoStudent");
+	    }
+	    request.setAttribute("infoPerson", infoPerson);
 
-            //          Build List of Countries for the Form
-            Iterator iterador = country.iterator();
+	    DynaActionForm changeApplicationInfoForm = (DynaActionForm) form;
+	    populateForm(changeApplicationInfoForm, infoPerson);
 
-            List nationalityList = new ArrayList();
-            while (iterador.hasNext()) {
-                InfoCountry countryTemp = (InfoCountry) iterador.next();
-                nationalityList.add(new LabelValueBean(countryTemp.getNationality(), countryTemp
-                        .getNationality()));
-            }
+	    //          Get List of available Countries
+	    Object result = null;
+	    result = ServiceManagerServiceFactory.executeService(userView, "ReadAllCountries", null);
+	    List country = (ArrayList) result;
 
-            session.setAttribute(SessionConstants.NATIONALITY_LIST_KEY, nationalityList);
-            session.setAttribute(SessionConstants.SEX_LIST_KEY, Gender.getSexLabelValues((Locale) request.getAttribute(Globals.LOCALE_KEY)));
-            session.setAttribute(SessionConstants.MONTH_DAYS_KEY, Data.getMonthDays());
-            session.setAttribute(SessionConstants.MONTH_LIST_KEY, Data.getMonths());
-            session.setAttribute(SessionConstants.YEARS_KEY, Data.getYears());
-            session.setAttribute(SessionConstants.EXPIRATION_YEARS_KEY, Data.getExpirationYears());
+	    //          Build List of Countries for the Form
+	    Iterator iterador = country.iterator();
 
-            return mapping.findForward("Success");
-        }
-        throw new Exception();
+	    List nationalityList = new ArrayList();
+	    while (iterador.hasNext()) {
+		InfoCountry countryTemp = (InfoCountry) iterador.next();
+		nationalityList.add(new LabelValueBean(countryTemp.getNationality(), countryTemp
+			.getNationality()));
+	    }
+
+	    session.setAttribute(SessionConstants.NATIONALITY_LIST_KEY, nationalityList);
+	    session.setAttribute(SessionConstants.SEX_LIST_KEY, Gender
+		    .getSexLabelValues((Locale) request.getAttribute(Globals.LOCALE_KEY)));
+	    session.setAttribute(SessionConstants.MONTH_DAYS_KEY, Data.getMonthDays());
+	    session.setAttribute(SessionConstants.MONTH_LIST_KEY, Data.getMonths());
+	    session.setAttribute(SessionConstants.YEARS_KEY, Data.getYears());
+	    session.setAttribute(SessionConstants.EXPIRATION_YEARS_KEY, Data.getExpirationYears());
+
+	    return mapping.findForward("Success");
+	}
+	throw new Exception();
     }
 
-    
     public ActionForward change(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
+	    HttpServletResponse response) throws Exception {
 
-        HttpSession session = request.getSession(false);
-        if (session != null) {
-            DynaActionForm changeApplicationInfoForm = (DynaActionForm) form;
-            IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
+	HttpSession session = request.getSession(false);
+	if (session != null) {
+	    DynaActionForm changeApplicationInfoForm = (DynaActionForm) form;
+	    IUserView userView = (IUserView) session.getAttribute(SessionConstants.U_VIEW);
 
-            Integer personCode = Integer.valueOf(getFromRequest("idInternal", request));
-            
-            Integer studentNumber = new Integer(getFromRequest("studentNumber", request));
-            request.setAttribute("studentNumber", studentNumber);
-            
-            // Create Dates
+	    Integer personCode = Integer.valueOf(getFromRequest("idInternal", request));
 
-            Calendar birthDate = Calendar.getInstance();
-            Calendar idDocumentIssueDate = Calendar.getInstance();
-            Calendar idDocumentExpirationDate = Calendar.getInstance();
+	    Integer studentNumber = new Integer(getFromRequest("studentNumber", request));
+	    request.setAttribute("studentNumber", studentNumber);
 
-            InfoPerson infoPerson = new InfoPerson();
-            infoPerson.setIdInternal(personCode);
-            String dayString = (String) changeApplicationInfoForm.get("birthDay");
-            String monthString = (String) changeApplicationInfoForm.get("birthMonth");
-            String yearString = (String) changeApplicationInfoForm.get("birthYear");
+	    // Create Dates
 
-            Integer day = null;
-            Integer month = null;
-            Integer year = null;
+	    Calendar birthDate = Calendar.getInstance();
+	    Calendar idDocumentIssueDate = Calendar.getInstance();
+	    Calendar idDocumentExpirationDate = Calendar.getInstance();
 
-            if ((dayString == null) || (monthString == null) || (yearString == null)
-                    || (dayString.length() == 0) || (monthString.length() == 0)
-                    || (yearString.length() == 0)) {
-                infoPerson.setNascimento(null);
-            } else {
-                day = new Integer((String) changeApplicationInfoForm.get("birthDay"));
-                month = new Integer((String) changeApplicationInfoForm.get("birthMonth"));
-                year = new Integer((String) changeApplicationInfoForm.get("birthYear"));
+	    InfoPersonEditor infoPerson = new InfoPersonEditor();
+	    infoPerson.setIdInternal(personCode);
+	    String dayString = (String) changeApplicationInfoForm.get("birthDay");
+	    String monthString = (String) changeApplicationInfoForm.get("birthMonth");
+	    String yearString = (String) changeApplicationInfoForm.get("birthYear");
 
-                birthDate.set(year.intValue(), month.intValue(), day.intValue());
-                infoPerson.setNascimento(birthDate.getTime());
-            }
+	    Integer day = null;
+	    Integer month = null;
+	    Integer year = null;
 
-            dayString = (String) changeApplicationInfoForm.get("idIssueDateDay");
-            monthString = (String) changeApplicationInfoForm.get("idIssueDateMonth");
-            yearString = (String) changeApplicationInfoForm.get("idIssueDateYear");
+	    if (StringUtils.isEmpty(dayString) || StringUtils.isEmpty(monthString) || StringUtils.isEmpty(yearString)) {
+		infoPerson.setNascimento(null);
+	    } else {
+		day = new Integer((String) changeApplicationInfoForm.get("birthDay"));
+		month = new Integer((String) changeApplicationInfoForm.get("birthMonth"));
+		year = new Integer((String) changeApplicationInfoForm.get("birthYear"));
 
-            if ((dayString == null) || (monthString == null) || (yearString == null)
-                    || (dayString.length() == 0) || (monthString.length() == 0)
-                    || (yearString.length() == 0)) {
-                infoPerson.setDataEmissaoDocumentoIdentificacao(null);
-            } else {
-                day = new Integer((String) changeApplicationInfoForm.get("idIssueDateDay"));
-                month = new Integer((String) changeApplicationInfoForm.get("idIssueDateMonth"));
-                year = new Integer((String) changeApplicationInfoForm.get("idIssueDateYear"));
+		birthDate.set(year.intValue(), month.intValue(), day.intValue());
+		infoPerson.setNascimento(birthDate.getTime());
+	    }
 
-                idDocumentIssueDate.set(year.intValue(), month.intValue(), day.intValue());
-                infoPerson.setDataEmissaoDocumentoIdentificacao(idDocumentIssueDate.getTime());
-            }
+	    dayString = (String) changeApplicationInfoForm.get("idIssueDateDay");
+	    monthString = (String) changeApplicationInfoForm.get("idIssueDateMonth");
+	    yearString = (String) changeApplicationInfoForm.get("idIssueDateYear");
 
-            dayString = (String) changeApplicationInfoForm.get("idExpirationDateDay");
-            monthString = (String) changeApplicationInfoForm.get("idExpirationDateMonth");
-            yearString = (String) changeApplicationInfoForm.get("idExpirationDateYear");
+	    if (StringUtils.isEmpty(dayString) || StringUtils.isEmpty(monthString) || StringUtils.isEmpty(yearString)) {
+		infoPerson.setDataEmissaoDocumentoIdentificacao(null);
+	    } else {
+		day = new Integer((String) changeApplicationInfoForm.get("idIssueDateDay"));
+		month = new Integer((String) changeApplicationInfoForm.get("idIssueDateMonth"));
+		year = new Integer((String) changeApplicationInfoForm.get("idIssueDateYear"));
 
-            if ((dayString == null) || (monthString == null) || (yearString == null)
-                    || (dayString.length() == 0) || (monthString.length() == 0)
-                    || (yearString.length() == 0)) {
-                infoPerson.setDataValidadeDocumentoIdentificacao(null);
-            } else {
-                day = new Integer((String) changeApplicationInfoForm.get("idExpirationDateDay"));
-                month = new Integer((String) changeApplicationInfoForm.get("idExpirationDateMonth"));
-                year = new Integer((String) changeApplicationInfoForm.get("idExpirationDateYear"));
+		idDocumentIssueDate.set(year.intValue(), month.intValue(), day.intValue());
+		infoPerson.setDataEmissaoDocumentoIdentificacao(idDocumentIssueDate.getTime());
+	    }
 
-                idDocumentExpirationDate.set(year.intValue(), month.intValue(), day.intValue());
-                infoPerson.setDataValidadeDocumentoIdentificacao(idDocumentExpirationDate.getTime());
-            }
+	    dayString = (String) changeApplicationInfoForm.get("idExpirationDateDay");
+	    monthString = (String) changeApplicationInfoForm.get("idExpirationDateMonth");
+	    yearString = (String) changeApplicationInfoForm.get("idExpirationDateYear");
 
-            InfoCountry nationality = new InfoCountry();
-            nationality.setNationality((String) changeApplicationInfoForm.get("nationality"));
+	    if (StringUtils.isEmpty(dayString) || StringUtils.isEmpty(monthString) || StringUtils.isEmpty(yearString)) {
+		infoPerson.setDataValidadeDocumentoIdentificacao(null);
+	    } else {
+		day = new Integer((String) changeApplicationInfoForm.get("idExpirationDateDay"));
+		month = new Integer((String) changeApplicationInfoForm.get("idExpirationDateMonth"));
+		year = new Integer((String) changeApplicationInfoForm.get("idExpirationDateYear"));
 
-            infoPerson.setTipoDocumentoIdentificacao(IDDocumentType.valueOf((String) changeApplicationInfoForm.get("identificationDocumentType")));
-            infoPerson.setNumeroDocumentoIdentificacao((String) changeApplicationInfoForm
-                    .get("identificationDocumentNumber"));
-            infoPerson.setLocalEmissaoDocumentoIdentificacao((String) changeApplicationInfoForm
-                    .get("identificationDocumentIssuePlace"));
-            infoPerson.setNome((String) changeApplicationInfoForm.get("name"));
+		idDocumentExpirationDate.set(year.intValue(), month.intValue(), day.intValue());
+		infoPerson.setDataValidadeDocumentoIdentificacao(idDocumentExpirationDate.getTime());
+	    }
 
-            String aux = (String) changeApplicationInfoForm.get("sex");
-            if ((aux == null) || (aux.length() == 0))
-                infoPerson.setSexo(null);
-            else
-                infoPerson.setSexo(Gender.valueOf(aux));
+	    InfoCountry nationality = new InfoCountry();
+	    nationality.setNationality((String) changeApplicationInfoForm.get("nationality"));
 
-            aux = (String) changeApplicationInfoForm.get("maritalStatus");
-            if ((aux == null) || (aux.length() == 0))
-                infoPerson.setMaritalStatus(null);
-            else
-                infoPerson.setMaritalStatus(MaritalStatus.valueOf(aux));
-            infoPerson.setInfoPais(nationality);
-            infoPerson.setNomePai((String) changeApplicationInfoForm.get("fatherName"));
-            infoPerson.setNomeMae((String) changeApplicationInfoForm.get("motherName"));
-            infoPerson.setFreguesiaNaturalidade((String) changeApplicationInfoForm
-                    .get("birthPlaceParish"));
-            infoPerson.setConcelhoNaturalidade((String) changeApplicationInfoForm
-                    .get("birthPlaceMunicipality"));
-            infoPerson.setDistritoNaturalidade((String) changeApplicationInfoForm
-                    .get("birthPlaceDistrict"));
-            infoPerson.setMorada((String) changeApplicationInfoForm.get("address"));
-            infoPerson.setLocalidade((String) changeApplicationInfoForm.get("place"));
-            infoPerson.setCodigoPostal((String) changeApplicationInfoForm.get("postCode"));
-            infoPerson.setFreguesiaMorada((String) changeApplicationInfoForm.get("addressParish"));
-            infoPerson.setConcelhoMorada((String) changeApplicationInfoForm.get("addressMunicipality"));
-            infoPerson.setDistritoMorada((String) changeApplicationInfoForm.get("addressDistrict"));
-            infoPerson.setTelefone((String) changeApplicationInfoForm.get("telephone"));
-            infoPerson.setTelemovel((String) changeApplicationInfoForm.get("mobilePhone"));
-            infoPerson.setEmail((String) changeApplicationInfoForm.get("email"));
-            infoPerson.setEnderecoWeb((String) changeApplicationInfoForm.get("webSite"));
-            infoPerson.setNumContribuinte((String) changeApplicationInfoForm.get("contributorNumber"));
-            infoPerson.setProfissao((String) changeApplicationInfoForm.get("occupation"));
-            infoPerson.setUsername((String) changeApplicationInfoForm.get("username"));
-            infoPerson.setLocalidadeCodigoPostal((String) changeApplicationInfoForm
-                    .get("areaOfAreaCode"));
+	    infoPerson.setTipoDocumentoIdentificacao(IDDocumentType
+		    .valueOf((String) changeApplicationInfoForm.get("identificationDocumentType")));
+	    infoPerson.setNumeroDocumentoIdentificacao((String) changeApplicationInfoForm
+		    .get("identificationDocumentNumber"));
+	    infoPerson.setLocalEmissaoDocumentoIdentificacao((String) changeApplicationInfoForm
+		    .get("identificationDocumentIssuePlace"));
+	    infoPerson.setNome((String) changeApplicationInfoForm.get("name"));
 
-            Object args[] = { infoPerson };
-            InfoPerson newInfoPerson = new InfoPerson();
-            try {
-                newInfoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
-                        "EditPersonalStudentInfo", args);
-            } catch (FenixServiceException e) {
-                throw new FenixActionException(e);
-            } catch (NotAuthorizedFilterException e) {
-                ActionErrors errors = new ActionErrors();
-                errors.add("errors", new ActionError("error.degreeAdministration.notMereStudent"));
-                saveErrors(request, errors);
-                return mapping.findForward("done");
-            }
+	    String aux = (String) changeApplicationInfoForm.get("sex");
+	    if (StringUtils.isEmpty(aux))
+		infoPerson.setSexo(null);
+	    else
+		infoPerson.setSexo(Gender.valueOf(aux));
 
-            request.removeAttribute("idInternal");
-            request.setAttribute("infoPerson", newInfoPerson);
-            populateForm(changeApplicationInfoForm, newInfoPerson);
+	    aux = (String) changeApplicationInfoForm.get("maritalStatus");
+	    if (StringUtils.isEmpty(aux)) {
+		infoPerson.setMaritalStatus(null);
+	    } else { 
+		infoPerson.setMaritalStatus(MaritalStatus.valueOf(aux));
+	    }
+	    infoPerson.setInfoPais(nationality);
+	    infoPerson.setNomePai((String) changeApplicationInfoForm.get("fatherName"));
+	    infoPerson.setNomeMae((String) changeApplicationInfoForm.get("motherName"));
+	    infoPerson.setFreguesiaNaturalidade((String) changeApplicationInfoForm
+		    .get("birthPlaceParish"));
+	    infoPerson.setConcelhoNaturalidade((String) changeApplicationInfoForm
+		    .get("birthPlaceMunicipality"));
+	    infoPerson.setDistritoNaturalidade((String) changeApplicationInfoForm
+		    .get("birthPlaceDistrict"));
+	    infoPerson.setMorada((String) changeApplicationInfoForm.get("address"));
+	    infoPerson.setLocalidade((String) changeApplicationInfoForm.get("place"));
+	    infoPerson.setCodigoPostal((String) changeApplicationInfoForm.get("postCode"));
+	    infoPerson.setFreguesiaMorada((String) changeApplicationInfoForm.get("addressParish"));
+	    infoPerson.setConcelhoMorada((String) changeApplicationInfoForm.get("addressMunicipality"));
+	    infoPerson.setDistritoMorada((String) changeApplicationInfoForm.get("addressDistrict"));
+	    infoPerson.setTelefone((String) changeApplicationInfoForm.get("telephone"));
+	    infoPerson.setTelemovel((String) changeApplicationInfoForm.get("mobilePhone"));
+	    infoPerson.setEmail((String) changeApplicationInfoForm.get("email"));
+	    infoPerson.setEnderecoWeb((String) changeApplicationInfoForm.get("webSite"));
+	    infoPerson.setNumContribuinte((String) changeApplicationInfoForm.get("contributorNumber"));
+	    infoPerson.setProfissao((String) changeApplicationInfoForm.get("occupation"));
+	    infoPerson.setUsername((String) changeApplicationInfoForm.get("username"));
+	    infoPerson.setLocalidadeCodigoPostal((String) changeApplicationInfoForm
+		    .get("areaOfAreaCode"));
 
-            return mapping.findForward("done");
-        }
+	    Object args[] = { infoPerson };
 
-        throw new Exception();
+	    InfoPerson newInfoPerson = null;
+	    try {
+		newInfoPerson = (InfoPerson) ServiceManagerServiceFactory.executeService(userView,
+			"EditPersonalStudentInfo", args);
+	    } catch (FenixServiceException e) {
+		throw new FenixActionException(e);
+	    } catch (NotAuthorizedFilterException e) {
+		ActionErrors errors = new ActionErrors();
+		errors.add("errors", new ActionError("error.degreeAdministration.notMereStudent"));
+		saveErrors(request, errors);
+		return mapping.findForward("done");
+	    }
+
+	    request.removeAttribute("idInternal");
+	    request.setAttribute("infoPerson", newInfoPerson);
+	    populateForm(changeApplicationInfoForm, newInfoPerson);
+
+	    return mapping.findForward("done");
+	}
+
+	throw new Exception();
     }
 
     private void populateForm(DynaActionForm changeApplicationInfoForm, InfoPerson infoPerson) {
-    	EditStudentInfoDispatchAction.populateForm(changeApplicationInfoForm, infoPerson);
+	EditStudentInfoDispatchAction.populateForm(changeApplicationInfoForm, infoPerson);
     }
 
     private String getFromRequest(String parameter, HttpServletRequest request) {
-    	return EditStudentInfoDispatchAction.getFromRequest(parameter, request);
+	return EditStudentInfoDispatchAction.getFromRequest(parameter, request);
     }
 
 }
